# SPDX-License-Identifier: Apache-2.0
# Copyright 2024-2026 Dragonscale Team

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uni-pydantic"
version = "0.3.0"
description = "Pydantic-based OGM (Object-Graph Mapping) for Uni Graph Database"
authors = [
    { name = "Dragonscale Industries Inc.", email = "dev@dragonscale.ai" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "uni-db>=0.1.18",
]

[project.urls]
Homepage = "https://www.rustic.ai"
Documentation = "https://rustic-ai.github.io/uni-db"
Repository = "https://github.com/rustic-ai/uni-db"

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.5.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.4",
    "mkdocs-jupyter>=0.25.1",
    "pymdown-extensions>=10.21",
    "pdoc>=16.0.0",
]

[tool.uv.sources]
uni-db = { path = "../uni-db", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/uni_pydantic"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
