[package]
name = "uni-algo"
description = "Graph algorithms for Uni - PageRank, Louvain, shortest paths, and more"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
uni-common = { workspace = true }
uni-store = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
fxhash = { workspace = true }
rand = { workspace = true }
arrow-array = { workspace = true }
lancedb = { workspace = true }
async-stream = "0.3"