# SPDX-License-Identifier: Apache-2.0
# Copyright 2024-2026 Dragonscale Team
[package]
name = "uni-bulk"
description = "High-throughput bulk ingestion engine for uni-db (BulkWriter, StreamingAppender, deferred index rebuild)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
uni-common = { workspace = true }
uni-store = { workspace = true }
uni-plugin-host = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
arrow-array = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
log = { workspace = true }
