[package]
name = "uni-cli"
description = "Command-line interface for Uni graph database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "uni"
path = "src/main.rs"

[dependencies]
uni-db = { workspace = true, default-features = true, features = ["mimalloc"] }
uni-common = { workspace = true }
uni-store = { workspace = true }
uni-plugin = { workspace = true }
uni-plugin-rhai = { workspace = true, optional = true }
tokio = { workspace = true }
clap = { workspace = true }
rustyline = { workspace = true }
colored = { workspace = true }
prettytable-rs = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["rhai-plugins-cli"]
# Enables `uni plugin install foo.rhai` — Rhai is pure-Rust, no extra
# runtime cost; on by default.
rhai-plugins-cli = ["dep:uni-plugin-rhai", "uni-db/rhai-plugins"]
provider-candle = ["uni-db/provider-candle"]
provider-mistralrs = ["uni-db/provider-mistralrs"]
provider-onnx = ["uni-db/provider-onnx"]
provider-onnx-dynamic = ["uni-db/provider-onnx-dynamic"]
provider-openai = ["uni-db/provider-openai"]
provider-gemini = ["uni-db/provider-gemini"]
provider-vertexai = ["uni-db/provider-vertexai"]
provider-mistral = ["uni-db/provider-mistral"]
provider-anthropic = ["uni-db/provider-anthropic"]
provider-voyageai = ["uni-db/provider-voyageai"]
provider-cohere = ["uni-db/provider-cohere"]
provider-azure-openai = ["uni-db/provider-azure-openai"]
gpu-cuda = ["uni-db/gpu-cuda"]
gpu-metal = ["uni-db/gpu-metal"]
