[package]
name = "uni-common"
description = "Common types, identity encoding, and schema for Uni graph database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
multibase = "0.9"
fxhash = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["fs", "io-util"] }
arrow-schema = { workspace = true }
object_store = { workspace = true }
base64 = "0.21"
rmp-serde = "1.3"
uni-btic = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }