[package]
name = "uni-crdt"
description = "Conflict-free Replicated Data Types for Uni graph database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
rmp-serde = "1.3"
uuid = { version = "1.23", features = ["v4", "serde"] }
fxhash = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
# M10: registry-dispatch path for `Crdt::merge_via_registry`. The
# dependency direction is uni-crdt → uni-plugin so the framework
# remains the lowest layer; uni-plugin-builtin sits above both.
uni-plugin = { workspace = true }

[dev-dependencies]
proptest = "1.11"
