[package]
name = "uni-locy-tck"
version = "1.1.0"
edition = "2021"

[dependencies]
uni-db = { path = "../uni" }
uni-query = { path = "../uni-query" }
uni-common = { path = "../uni-common" }
uni-cypher = { path = "../uni-cypher" }
uni-locy = { path = "../uni-locy" }
cucumber = { version = "0.21", features = ["libtest"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
indexmap = "2.0"
nom = "7.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = { workspace = true }

[[test]]
name = "locy_tck"
harness = false

[dev-dependencies]
libtest-mimic = "0.8"
gherkin = "0.14"
