[package]
name = "uni-locy"
description = "Locy compiler: validates and stratifies Locy programs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

autotests = false

[dependencies]
uni-cypher = { workspace = true }
uni-common = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
# Phase B A3: real Candle-backed neural classifier. Workspace pins the
# version; CPU-only build (no CUDA/Metal features) keeps the dep
# footprint small.
candle-core = { workspace = true }
candle-nn = { workspace = true }

[dev-dependencies]
uni-cypher = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[[test]]
name = "integration"
path = "tests/integration.rs"
